# ConcreteCorrosion

./: .gitignore  CMakeLists.txt  Install_Libs.sh  Makefile  README.md  SetVarsHPC.sh  main.cpp
Documentation/: Doc.tex  Fig1.eps  MeshFig.eps  PostProcessingA.eps  PostProcessingB.eps
Initializations/: Initializations.h  Initialize.cpp
Models/: ModelRegister.cpp  ModelRegister.h
Models/ElectroChemistry/: EchemConstraints.cpp  EchemConstraints.h  ElectroSurface.cpp  ElectroSurface.h  NernstPlanck.cpp  NernstPlanck.h  Reactions.cpp  Reactions.h
Models/ExternalForce/: WeakExternal.cpp
Physics/: DofSpace.cpp  TimeSchemes.cpp  physics.cpp
Physics/Visualisation/: PlotData_XY.cpp  Plot_Surf2D.cpp  Plot_Surf3D.cpp  Visualisation.cpp  Visualisation.h
Solvers/: NonLinSolver.cpp  NonLinSolver.h  TimeSolver.cpp  TimeSolver.h
TestCases/ElectroChemistry/: PlotData_EChem.m  Test_ElectroChem.json
TestCases/ElectroChemistry/Mesh/: Beam.m  Beam_32c.h5  Geo.stl
mesh/ElementTypes/: TypeRegister.cpp  TypeRegister.h
mesh/ElementTypes/3D/: T2_6B.cpp  T3_10B.cpp
mesh/ElementTypes/NURBS/: NURBS3_Plane2.cpp
utility/: math.cpp  utility.h
